# python-inspector

./: pyproject.toml
src/python_inspector/: api.py  resolution.py  utils.py  utils_pypi.py
